--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start":"nodemon src/server.js",
-    "debug":"NODE_ENV=development PORT=3000 nodemon --inspect-brk src/server.js"
+    "debug": "nodemon --inspect src/server.js"
   },
   "keywords": [],
   "author": "",
